// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton disabled prop sets 1`] = `
.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #e42d42;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  opacity: 0.25;
  box-shadow: none !important;
  background-color: transparent !important;
  color: #e42d42;
  border-width: 2px;
  border-style: solid;
  border-color: currentColor;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<a
  className="c0"
  color="primary"
  disabled={true}
/>
`;

exports[`OutlineButton renders 1`] = `
.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #e42d42;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  box-shadow: none !important;
  background-color: transparent !important;
  color: #e42d42;
  border-width: 2px;
  border-style: solid;
  border-color: currentColor;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<a
  className="c0"
  color="primary"
/>
`;

exports[`OutlineButton with custom color 1`] = `
.c0 {
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 20px;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.125;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  -webkit-transition: .125s box-shadow ease-out;
  transition: .125s box-shadow ease-out;
  box-shadow: 0 2px 12px rgba(0,0,0,0.125);
  border-radius: 9999px;
  border-width: 0;
  border-style: solid;
  box-shadow: none !important;
  background-color: transparent !important;
  color: #ffffff;
  border-width: 2px;
  border-style: solid;
  border-color: currentColor;
}

.c0:hover,
.c0:focus {
  outline: 0;
  box-shadow: 0 2px 12px 2px rgba(0,0,0,0.125);
}

.c0:active {
  outline: 0;
  box-shadow: 0 4px 16px 2px rgba(0,0,0,0.125);
}

<a
  className="c0"
  color="white"
/>
`;
